# libasrutil

./: ChangeLog  Makefile.am  README  asrutil.pc.in  config.h.in  configure.in  groups  project.config
media_files/: cnn10.0821.1m.male.1ch.16bit.8khz.pcm  en_2_zh.txt  xinwen.0929.10s.female.1ch.16bit.8khz.pcm  xinwen.0929.10s.male.1ch.16bit.8khz.pcm  xinwen.0929.1m.female.1ch.16bit.8khz.pcm  xinwen.0929.1m.male.1ch.16bit.8khz.pcm  xinwen.0929.1s.female.1ch.16bit.8khz.pcm  xinwen.0929.2s.female.1ch.16bit.8khz.pcm  xinwen.0929.3s.female.1ch.16bit.8khz.pcm  xinwen.0929.5s.female.1ch.16bit.8khz.pcm  zh_2_en.txt
src/: Makefile.am  asrutil.c  asrutil.h  asrutil_curl.c  asrutil_curl.h  asrutil_osd.h  asrutil_text_translate.c  asrutil_text_translate.h  asrutil_util.c  asrutil_util.h  asrutil_voice_engine.c  asrutil_voice_engine.h  rules.mk.in
src/tests/: Makefile.am  asrutil_text_translate_test.c  asrutil_voice_engine_test.c  asrutil_voice_engine_test_chunked.c  asrutil_voice_engine_test_seperate.c  asrutil_voice_engine_test_seperate_en_2_zh.c  asrutil_voice_engine_test_seperate_vad.c  asrutil_voice_engine_test_seperate_vad_chunked.c  asrutil_voice_engine_test_seperate_zh_2_en.c
